# 2-D-Discrete-Fourier-Transform

./: CMakeLists.txt  README.md  README.txt  main-cuda.cu  main-mpi.cc  main-threads.cc
input/: Tower128.txt  Tower4.txt  Tower512.txt  Tower8.txt  a.py
scripts/: run-all.sh  script-cuda-forward.sh  script-cuda-reverse.sh  script-mpi-forward.sh  script-mpi-reverse.sh  script-threads-forward.sh  script-threads-reverse.sh
src/: complex.cc  complex.cu  complex.cuh  input_image.cc  input_image.cu
